--- a/2ExercisesGithub/CF Day 4 Exercise (Day 1 Week 2)/index.html
+++ b/2ExercisesGithub/CF Day 4 Exercise (Day 1 Week 2)/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Nutrition Label</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
+
+<!--THIS CODE HEAVILY DEPENDS ON A CODE FROM FREE CODE CAMP-->
+
 <body>
-    
+  <div class="label">
     <header>
-        <h1>Nutrition Facts</h1>
-        <p>Serving Size 1 cup (50g)
-            Servings Per Container 10
-        </p>
+      <h1 class="bold">Nutrition Facts</h1>
+      <div class="divider"></div>
+      <p>8 servings per container</p>
+      <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
     </header>
-
-    <main>
-        <div class="calories-info">
-            <div class="left-container">
-              <p class="bold sm-text">Amount per serving</p>
-                <h1>Calories</h1>
-              </div>
-            <h1 class="right">230</h1>
-          </div>          
-
-
-    </main>
+    <div class="divider large"></div>
+    <div class="calories-info">
+      <div class="leftcontainer">
+        <h2 class="bold small-text">Amount per serving</h2>
+        <p>Calories</p>
+      </div>
+      <span>230</span>
+    </div>
+  </div>
 </body>
 </html>
