Finishing 1. Code review with 1 extra hour

--- a/2ExercisesGithub/CF Day 5 Exercise (Day 2 Week 2)/index.html
+++ b/2ExercisesGithub/CF Day 5 Exercise (Day 2 Week 2)/index.html
@@ -21,19 +21,10 @@
         <nav>
 
             <ul>
-                <li><a href="#home">Home</a>
-                    <!--
-                    <ul>
-                        <li>Welcome to AudioWide</li>
-                        <li>Why AudioWide?</li>
-                        <li>AudioWide Fanbase</li>
-                    </ul>
-                    -->
-                </li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#special">Special</a></li>
-                <li style="float:right"><a class="active" href="#about">About</a></li>
+                <li><a href="#Pasta">Home</a></li>
+                <li><a href="#Taco">News</a></li>
+                <li><a href="#Pizza">Contact</a></li>
+                <li><a href="#Desert">Special</a></li>
               </ul>
 
         </nav>
