Commit Day1 week5 - basic ex1

--- a/2ExercisesGithub/CF Day 11 Exercise (Day 4 Week 3)/basic exercise/index.html
+++ b/2ExercisesGithub/CF Day 11 Exercise (Day 4 Week 3)/basic exercise/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+
+    <p id="text1"></p>
+    <br>
+    <p id="text2"></p>
+    <br>
+    <p id="text3"></p>
+    <br>
+    <p id="text4"></p>
+    <br>
+    <p id="text5"></p>
+    <br>
+
     
     <script src="basic.js"></script>
 
